--- a/index.html
+++ b/index.html
@@ -1,27 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
 
     <title>Login</title>
 
     <!-- Custom fonts for this template-->
-    <link
-      href="vendor/fontawesome-free/css/all.min.css"
-      rel="stylesheet"
-      type="text/css"
-    />
+    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css" />
     <link
       href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet" />
@@ -37,18 +30,23 @@
         0% {
           transform: translateX(0);
         }
+
         6.5% {
           transform: translateX(-6px) rotateY(-9deg);
         }
+
         18.5% {
           transform: translateX(5px) rotateY(7deg);
         }
+
         31.5% {
           transform: translateX(-3px) rotateY(-5deg);
         }
+
         43.5% {
           transform: translateX(2px) rotateY(3deg);
         }
+
         50% {
           transform: translateX(0);
         }
@@ -65,10 +63,7 @@
     </style>
 
     <!-- Add this CDN for animations if not already included -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   </head>
 
   <body class="bg-gradient-primary">
@@ -88,53 +83,29 @@
                     </div>
                     <form class="user" id="loginForm">
                       <div class="form-group">
-                        <input
-                          type="email"
-                          class="form-control form-control-user"
-                          id="exampleInputEmail"
-                          aria-describedby="emailHelp"
-                          placeholder="Enter Email Address..."
-                          required
-                        />
+                        <input type="email" class="form-control form-control-user" id="exampleInputEmail"
+                          aria-describedby="emailHelp" placeholder="Enter Email Address..." required />
                       </div>
                       <div class="form-group">
-                        <input
-                          type="password"
-                          class="form-control form-control-user"
-                          id="exampleInputPassword"
-                          placeholder="Password"
-                          required
-                        />
+                        <input type="password" class="form-control form-control-user" id="exampleInputPassword"
+                          placeholder="Password" required />
                       </div>
                       <div class="form-group">
                         <div class="custom-control custom-checkbox small">
-                          <input
-                            type="checkbox"
-                            class="custom-control-input"
-                            id="customCheck"
-                          />
-                          <label class="custom-control-label" for="customCheck"
-                            >Remember Me</label
-                          >
+                          <input type="checkbox" class="custom-control-input" id="customCheck" />
+                          <label class="custom-control-label" for="customCheck">Remember Me</label>
                         </div>
                       </div>
-                      <button
-                        type="submit"
-                        class="btn btn-primary btn-user btn-block"
-                      >
+                      <button type="submit" class="btn btn-primary btn-user btn-block">
                         Login
                       </button>
                     </form>
                     <hr />
                     <div class="text-center">
-                      <a class="small" href="forgot-password.html"
-                        >Forgot Password?</a
-                      >
+                      <a class="small" href="forgot-password.html">Forgot Password?</a>
                     </div>
                     <div class="text-center">
-                      <a class="small" href="register.html"
-                        >Create an Account!</a
-                      >
+                      <a class="small" href="register.html">Create an Account!</a>
                     </div>
                   </div>
                 </div>
@@ -228,4 +199,5 @@
 
     <!-- Add these CSS styles to your head section or CSS file -->
   </body>
+
 </html>
